# Verbal-arithmetic

./: CMakeLists.txt  README.md  Solver.cpp  Solver.h  main.cpp
nbproject/: configurations.xml  project.xml
